--- a/bike-service/src/main/resources/bootstrap.yaml
+++ b/bike-service/src/main/resources/bootstrap.yaml
@@ -3,5 +3,5 @@ spring:
         name: bike-service
     cloud:
         config:
-            enable: true
-            url: http://localhost:9090
+            enabled: true
+            uri: http://localhost:9090
