--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
         config:
             server:
                 git:
-                    default-label: main
+                    default-label: eureka
                     uri: https://github.com/AlcidesFabianFernancez/MicroserviciosJava
                     search-paths: config-data
     application: 
