--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -4,9 +4,9 @@ server:
 eureka:
   client:
     fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      default-zone: http://localhost:8761/eureka
+      register-with-eureka: true
+      service-url:
+        default-zone: http://localhost:8761/eureka
   instance:
     hostname: localhost
 
@@ -15,7 +15,7 @@ spring:
     gateway:
       discovery:
         locator:
-          enable: true
+          enabled: true
       routes:
         - id: user-service
           uri: lb://user-service
