--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8585
+  port: 8080
 
 eureka:
   client:
@@ -20,12 +20,12 @@ spring:
         - id: user-service
           uri: lb://user-service
           predicates: 
-            - Patch=/user/**
+            - Path=/user/**
         - id: car-service
           uri: lb://car-service
           predicates: 
-            - Patch=/car/**
+            - Path=/car/**
         - id: bike-service
           uri: lb://bike-service
           predicates: 
-            - Patch=/bike/**
+            - Path=/bike/**
